@@ -4,25 +4,22 @@
 # obsolete, replaced by "autoreconf -i -W all"
 #
 
-autoreconf -i -W all
+#autoreconf -i -W all
 
-exit
+#exit
 
 
 echo "libtoolize..."
-libtoolize \
+libtoolize || glibtoolize \
     || { echo "libtoolize failed"; exit 1; }
-
 echo "aclocal..."
-# use this if you have additional files in the m4 directory:
-#aclocal -I m4
-aclocal \
+aclocal -I m4 \
     || { echo "aclocal failed"; exit 1; }
 echo "autoheader..."
 autoheader --warnings=all \
     || { echo "autoheader failed"; exit 1; }
 echo "automake..."
-automake --warnings=all --warnings=no-syntax --foreign --add-missing \
+automake --warnings=all --foreign --add-missing \
     || { echo "automake failed"; exit 1; }
 
 echo "autoconf..."
