@@ -1,6 +1,8 @@
 /* dlvhex-aggregateplugin -- aggregate atoms for hex-programs.
  * Copyright (C) 2007 Roman Schindlauer
  * 
+ * This file is part of dlvhex-aggregateplugin.
+ *
  * dlvhex-aggregateplugin is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as published by
  * the Free Software Foundation; either version 2 of the License, or (at your
@@ -31,8 +33,8 @@
 #include "dlvhex/PrintVisitor.h"
 
 
-
 AggAtom::AggAtom()
+	: MASKTERM("mask")
 {
 	addInputPredicate();
 	addInputTuple();
@@ -67,7 +69,7 @@ AggAtom::projectInput(const AtomSet& i, const Tuple& mask)
 
 		for (Tuple::size_type pos = 0; pos < mask.size(); pos++)
 		{
-			if (mask[pos].getUnquotedString() == "mask")
+			if (mask[pos].getUnquotedString() == AggAtom::MASKTERM.getUnquotedString())
 			{
 				newarg.push_back(a.getArgument(pos+1));
 			}
