@@ -4,6 +4,8 @@
 # dlvhex-aggregateplugin -- aggregate atoms for hex-programs.
 # Copyright (C) 2007 Roman Schindlauer
 # 
+# This file is part of dlvhex-aggregateplugin.
+#
 # dlvhex-aggregateplugin is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License as published by
 # the Free Software Foundation; either version 2 of the License, or (at your
